# As3Ndk

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ndk/as3/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Wxr.cpp
app/src/main/cpp/inshow/: CMakeLists.txt  inshow-lib.cpp
app/src/main/cpp/native/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/ndk/as3/myapplication/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/ndk/as3/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
